Fix auto layout issue on ultra wide screen

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 
 .container {
   min-height: 600px;
-  max-width: 120vh;
+  max-width: 110vh;
 }
 
 .profile {
